<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainMenuActivity">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/game_title"
            android:textSize="34sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="32dp" />

        <Button
            android:id="@+id/btn_main_play"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/play_button_text"
            android:textColor="@color/text_primary"
            android:backgroundTint="@color/btn_primary"
            android:textSize="24sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="32dp" />

        <Button
            android:id="@+id/btn_main_tutorial"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/how_to_play_button_text"
            android:textColor="@color/text_primary"
            android:backgroundTint="@color/btn_primary"
            android:textSize="24sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="32dp" />

        <Button
            android:id="@+id/btn_main_settings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/settings_button_text"
            android:textColor="@color/text_primary"
            android:backgroundTint="@color/btn_primary"
            android:textSize="24sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="32dp" />

        <Button
            android:id="@+id/btn_main_quit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/quit_button_text"
            android:textColor="@color/text_primary"
            android:backgroundTint="@color/btn_primary"
            android:textSize="24sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>