<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:contentPadding="30dp"
    app:cardCornerRadius="20dp"
    app:cardPreventCornerOverlap="false"
    app:cardBackgroundColor="@color/secondary">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_to_play_overlay_title"
            android:textAllCaps="true"
            android:textSize="32sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="32dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/tutorial_description_text"
            android:textSize="18sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="32dp" />

        <Button
            android:id="@+id/btn_tutorial_overlay_close"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/close_button_text"
            android:textColor="@color/text_primary"
            android:backgroundTint="@color/btn_primary"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>