<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:contentPadding="30dp"
    app:cardCornerRadius="20dp"
    app:cardPreventCornerOverlap="false"
    app:cardBackgroundColor="@color/secondary">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/textview_overlay_settings_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/settings_overlay_title"
            android:textAllCaps="true"
            android:textSize="32sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_settings_overlay"
            android:layout_width="wrap_content"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:text="@string/sound_effects_setting_text"
            android:textColor="@color/text_primary"
            app:switchPadding="20sp"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/btn_settings_overlay_close"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="24sp"
            android:textColor="@color/text_primary"
            android:backgroundTint="@color/btn_primary"
            android:text="@string/close_button_text" />

    </LinearLayout>

</androidx.cardview.widget.CardView>