<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:contentPadding="30dp"
    app:cardCornerRadius="20dp"
    app:cardPreventCornerOverlap="false"
    app:cardBackgroundColor="@color/secondary">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/textview_game_end_overlay_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/win_overlay_title"
            android:textAllCaps="true"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textview_game_end_overlay_goals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="TextView"
            android:textSize="20sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/textview_game_end_overlay_moves"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="TextView"
            android:textSize="20sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/textview_game_end_overlay_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="TextView"
            android:textSize="20sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="32dp" />

        <Button
            android:id="@+id/btn_game_end_overlay_play_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/text_primary"
            android:backgroundTint="@color/btn_primary"
            android:text="@string/play_again_button_text" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="32dp" />

        <Button
            android:id="@+id/btn_game_end_overlay_level_select"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="24sp"
            android:textColor="@color/text_primary"
            android:backgroundTint="@color/btn_primary"
            android:text="@string/level_select_button_text" />

    </LinearLayout>

</androidx.cardview.widget.CardView>